# tanco

./: .gitignore  .rogo  .tanco  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  client.py  database.py  driver.py  model.py  orgtest.py  pyproject.toml  requirements.txt  rogo  rogo.py  rogo.sdb  rogo.sh  run-server  runner.py  steps.py  test_desc.py  testplan.org  testris.py
.github/workflows/: ci.yaml
rogo/: app.py  client.py  database.py  driver.py  model.py  orgtest.py  runner.py  testplan.org
rogo/sql/: init.sql
rogo/static/: firebase-cfg.mjs  login.m.js  style.css
rogo/templates/: about.html  attempt.html  challenge.html  challenges.html  index.html  live.html  login.html  me.html
static/: htmx.js  style.css
tanco/: app.py  client.py  database.py  driver.py  model.py  orgtest.py  runner.py  testplan.org
tanco/sql/: init.sql
tanco/static/: firebase-cfg.mjs  login.mjs  style.css
tanco/templates/: about.html  attempt.html  challenge.html  index.html  login.html  me.html  pass.html  please_login.html  result.html  state.html  test.html  websocket.html  whoami.html
templates/: about.html  challenges.html  index.html
tests/: test_basic.py
