[project]
name = "tanco"
version = "0.0.3"
description='A tool for test-driven teaching.'
dependencies = [
  "jwt ~= 1.3.1",
  "requests ~= 2.31.0",
  "quart ~= 0.19.4",
  "hypercorn ~= 0.16.0" ]
maintainers = [
  { name = "Michal J Wallace", email = "michal.wallace@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://tangentcode.com/"
"Source" = "https://github.com/tangentcode/tanco"
"Live Server" = "https://tanco.tangentcode.com/"

[project.scripts]
tanco = "tanco.driver:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
