[project]
name = "tanco"
version = "0.0.9"
description='A tool for test-driven teaching.'
dependencies = [
  "jwt ~= 1.3.1",
  "requests ~= 2.31.0",
  "quart ~= 0.19.4",
  "hypercorn ~= 0.16.0" ]
maintainers = [
  { name = "Michal J Wallace", email = "michal.wallace@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License"]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://tangentcode.com/"
"Source" = "https://github.com/tangentcode/tanco"
"Live Server" = "https://tanco.tangentcode.com/"

[project.scripts]
tanco = "tanco.driver:main"


[build-system]
build-backend = "setuptools.build_meta"
# setuptools-scm causes it to include all files tracked by git
# (so we get sql/init.sql and other non-python files)
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]


[tool.ruff]
line-length = 120
select = [
    'E', 'F', 'I',
    'YTT', 'COM', 'T10', 'ISC', 'G', 'PIE', 'Q', 'RSE',
    'PLC', 'PLE',
    'RUF',
]
ignore = [
  'E701', # multiple statements on one line
]
[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
[tool.ruff.isort]
lines-after-imports = 1
